# reprodutor_musicas

./: LICENSE  README.md
backend/: .env  app.py  config.py  models.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AlbumContainer.tsx  Background.tsx  FooterReproducao.tsx  LetraContainer.tsx
frontend/app/hooks/: useAudioPlayer.ts  usePlaylist.ts
frontend/app/services/: musicaService.ts
frontend/app/utils/: calcColor.ts
