[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas Franco <127855437+lucasfc-dev@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
tortoise-orm = "^0.25.1"
mutagen = "^1.47.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
